--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".TaptapActivity"/>
-        <activity android:name=".BalloonActivity"/>
+        <activity android:name=".TaptapActivity" />
+        <activity android:name=".BalloonActivity" />
+        <activity android:name=".ScavengerHuntActivity"/>
+        <activity android:name=".ScavListActivity"/>
     </application>
 
 </manifest>
