--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -37,6 +39,7 @@
         <activity android:name=".InitialQuizActivity" />
         <activity android:name=".LeftRightActivity" />
         <activity android:name=".FindNumberActivity" />
+        <activity android:name=".ConnTestActivity" />
     </application>
 
 </manifest>
