memory card game ToDo: memory card game - disable(double touch, flip 3+ cards), fit image size automatically

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".FindNumberActivity" />
         <activity android:name=".ConnTestActivity" />
         <activity android:name=".WhackAMoleActivity" />
+        <activity android:name=".MemoryCardGameActivity" />
     </application>
 
 </manifest>
