--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -52,5 +53,11 @@ dependencies {
     //implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     //implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
 
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.2.0')
+    // Add the dependency for the Realtime Database library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-database-ktx'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
