--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
 
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -30,6 +31,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".GameListActivity" />
         <activity android:name=".TaptapActivity" />
         <activity android:name=".BalloonActivity" />
         <activity android:name=".ScavengerHuntActivity" />
@@ -42,6 +44,8 @@
         <activity android:name=".ConnTestActivity" />
         <activity android:name=".WhackAMoleActivity" />
         <activity android:name=".MemoryCardGameActivity" />
+        <activity android:name=".SearchRoomActivity" />
+        <activity android:name=".LobbyActivity" />
     </application>
 
 </manifest>
