--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
